Mon Jul 13 13:46:33 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2:
	- just touch target for permission when no service provided
	(check): check for Active

Mon Jul 13 12:12:29 2020  Rob Lauer  <rlauer6@comcast.net>

	[service]:
	* makala/data/Makefile.jinja2: add service permission

	[logging]:
	* makala/aws/lambda_role.py: replace print w/logging
	* makala/aws/utils.py: likewise
	* makala/makala.py: likewise

Mon Jul 13 08:42:37 2020  Rob Lauer  <rlauer6@comcast.net>

	[refactor, use classes]:
	* makala/makala.py: use AWSVPCConfig, AWSLambdaRole, LambdaConfig
	* makala/lambda_config.py:
	(LambdaConfig): first commit
	(EnvironmentVars): first commit
	* makala/aws/vpc_config.py: new
	* makala/aws/lambd_role.py: new
	* Makefile: add above to build
	* makala/data/Makefile.jinja2:
	- initial create depends on {lambda}-role.arn
	- duplicate $(LAMBDA_ARN) in CLEANFILES
	* makala/utils.py:
	(list_role_policies): new
	(detach_role_policy): new
	(delete_role): new

Sat Jul 11 17:05:07 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2: compile modules

Sat Jul 11 11:42:25 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile:
	- add data/Makefile.jinja2, data/makala.cfg as dependencies for package build
	* README.md: place holder for makala.cfg docs
	* makala/data/Makefile.jinja2
	- add pattern rule for .pyc files
	- add .pyc file to CLEANFILES

Sat Jul 11 11:20:21 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala.py
	- use local makala.cfg if exists
	-  path, not name for MakalaConfig
	* makala/makala_config.py
	(__init__): path, not name

Sat Jul 11 11:06:06 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile: pattern rule for all .py files
	* makala/__init__.py: import classes
	* makala/lambda_config.py: stub for now
	* makala/makala.py: MakalaConfig
	* makala/makala_config.py: move MakalConfig to above

Sat Jul 11 09:42:08 2020  Rob Lauer  <rlauer6@comcast.net>

	* makala/makala.py:
	(MakalConfig):