@@ -1,3 +1,9 @@
+Mon Jul 13 13:50:37 2020  Rob Lauer  <rlauer6@comcast.net>
+
+	* makala/makala.py: generate stub
+	* makala/lambda_config.py: likewise
+	(generate stub): new
+
 Mon Jul 13 13:46:33 2020  Rob Lauer  <rlauer6@comcast.net>
 
 	* makala/data/Makefile.jinja2:
